--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dominikkolarsky.github.io/obecnik-pizzerie-app",
+  "homepage": "https://obecnik.cz",
   "name": "obecnik-pizzerie-app",
   "version": "0.1.0",
   "private": true,
